<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/newdata" android:title="@string/new_item" />
    <item android:id="@+id/filter" android:title="@string/filter_item" />
    <item android:id="@+id/sortOrder" android:title="@string/sort_order_item" />
    <item android:id="@+id/tostart" android:title="@string/tostart_item" />
    <item android:id="@+id/toend" android:title="@string/toend_item" />
    <item android:id="@+id/refresh" android:title="@string/refresh_item" />
    <item android:id="@+id/savetext" android:title="@string/save_item" />
    <item android:id="@+id/restore" android:title="@string/restore_item" />
    <item android:id="@+id/setopenweatherkey" android:title="@string/set_key_item" />
    <item android:id="@+id/setdatadirectory" android:title="@string/set_data_directory_item" />
    <item android:id="@+id/help" android:title="@string/help_item" />
</menu>
